Fix vertical spacing of gallery and arrows

--- a/styles/art.css
+++ b/styles/art.css
@@ -18,10 +18,13 @@
 
 #art #art-carousel {
   position: absolute;
-  top: 20%;
-  display: flex;
-  justify-content: space-between;
-  /* width: calc(100% - 60px); */
+  height: 60vh;
+  width: 100%;
+}
+
+#art #art-arrows {
+  position: absolute;
+  height: 60vh;
   width: 100%;
 }
 
@@ -31,6 +34,7 @@
   display: flex;
   justify-content: center;
   transition-duration: 0.5s;
+  transform: translateY(-50%);
 }
 
 #art .gallery-painting-container:hover {
@@ -60,11 +64,11 @@
 
 #art span {
   position: absolute;
-  top: 25%;
-  width: 24px;
-  height: 24px;
-  border-left: 1px solid #fff;
-  border-bottom: 1px solid #fff;
+  top: 50%;
+  width: 2.5vw;
+  height: 2.5vw;
+  border-left: 2px solid #fff;
+  border-bottom: 2px solid #fff;
   box-sizing: border-box;
   z-index: 50;
 }
@@ -74,11 +78,11 @@
 }
 
 #art #left {
-  transform: rotate(45deg);
+  transform: rotate(45deg) translateY(-50%);
   left: 15px;
 }
 
 #art #right {
-  transform: rotate(-135deg);
+  transform: rotate(-135deg) translateY(50%);
   right: 15px;
 }
